# Hackathon-01-AI-Book

./: .gitignore  CLAUDE.md  Readme.md  package-lock.json  package.json
.claude/: settings.local.json
.specify/memory/: constitution.md
fullstack/backend/: .env.example  .gitignore  README.md  agent.py  api_models.py  app.py  ingest_local.py  main.py  models.py  pyproject.toml  requirements.txt  retrieval.py  test_chat.py  validate_config.py
fullstack/backend/test/: test_agent.py  test_main.py  test_retrieval.py
fullstack/frontend-book/: .env  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
history/adr/: 001-frontend-technology-stack.md  001-rag-agent-architecture.md  002-component-architecture.md  003-accessibility-strategy.md  004-performance-approach.md  005-responsive-design-approach.md
specs/001-rag-book-embeddings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fastapi-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/01-robotic-nervous-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/02-robot-kinematics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/03-digital-twin-simulation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/04-perception-systems/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/05-isaac-ai-robot-brain/: plan.md  (+5 more)
(+224 files in other folders)
